# mcp-waifu-queue

./: .env.example  .gitignore  README.md  manim-animation.py  pyproject.toml  pytest.ini  requirements.txt
docs/: index.html
mcp_waifu_queue/: __init__.py  config.py  main.py  models.py  queue.py  respond.py  task_queue.py  utils.py  worker.py
mcp_waifu_queue/providers/: openrouter.py
mcp_waifu_queue/scripts/: start-services.sh
tests/: conftest.py  test_integration.py
